@startuml
package AdministracionUsuarios {
    class Administrador {
        - id: int
        - usuario: String
        - contraseña: String
        + iniciarSesion(): boolean
        + activarCuenta(usuario: Perfil): void
        + desactivarCuenta(usuario: Perfil): void
        + cambiarTipoUsuario(usuario: Perfil, tipo: String): void
        + eliminarCuenta(usuario: Perfil): void
        + consultarUsuarios(): List<Perfil>
    }
}
package CatalogoCanciones {
enum Genero {
        GAME_OST
        ROCK
        ROCK_ALTERNATIVO
        VALS
        TANGO
        REGIONAL_MEXICANA
        RAP
        CLASICA
        MOVIE_OST
        JAZZ
        COUNTRY
        POP
        REGGAETON
        TRAP_LATINO
        TRAP
        K_POP
        BOLERO
        PASILLO
}
}
package CatalogoArtistas {
    class ArtistaDAO {

        + registrarArtista(artista: Artista): void
        + actualizarArtista(artista: Artista): void
        + eliminarArtista(artista: Artista): void
        + buscarArtista(): List<Artista>
        + buscarArtistaID(artista: Artista): Artista
    }

    class ServicioValidacion {
        + validarCampos(artista: Artista): boolean
        + esNombreUnico(nombre: string): boolean
        + tieneElementoAsociado(artista: Artista): boolean
    }

    class Artista {
        - id: int
        - nombre: String
        - generos: List<Genero>
        - fechaNacimiento: Date
        - biografia: String
        - imagen: BufferedImage
    }


    interface UnicoNombreValidable {
        + esNombreUnico(nombre: string): boolean
    }

    interface AsociacionValidable {
        + tieneElementosAsociados(artista : Artista): boolean
    }
}

Administrador --> ArtistaDAO
ArtistaDAO --> Artista
ServicioValidacion --> Artista
ServicioValidacion ..|> UnicoNombreValidable
ServicioValidacion ..|> AsociacionValidable
ArtistaDAO --> ServicioValidacion
Artista --> Genero
@enduml